# SoftwareDesign

./: .gitignore  README.md
Composite_System/: .project  CMakeLists.txt
Composite_System/include/: Component.h  Device.h  System.h
Composite_System/src/: Device.cpp  System.cpp  test.cpp
Visitor/: CMakeLists.txt
Visitor/include/Element/: Boat.h  Car.h  Train.h  Vehicle.h
Visitor/include/Visitor/: Animal.h  Human.h  Object.h  Package.h
Visitor/src/: main.cpp
